opportunity search improvements

--- a/configuration/partials/opportunity-search-form.hbs
+++ b/configuration/partials/opportunity-search-form.hbs
@@ -255,7 +255,7 @@
     {
       name: "geo_lookup",
       display: "display",
-      templates: { header: "<strong class=\"title\">Location</strong>" },
+      templates: { header: "" },
       bloodhound: {
         datumTokenizer: "objWhitespace",
         datumTokenizerField: "place",
