--- a/configuration/partials/opportunity/full.hbs
+++ b/configuration/partials/opportunity/full.hbs
@@ -169,7 +169,7 @@
       </div>
 
       <div class="panel hidden" role="tabpanel" aria-hidden="true" id="location" data-tab-name="location">
-        <div class="panel-body location-info">
+        <div class="t-padding-full r-padding-full l-padding-full panel-body location-info">
           {{#compare (length (arrayify geo_coords)) ">" 0 ~}}
           <div class="container-content container-map">
             <div id="map-content-primary" style="height: 60vh; width: 100%;" data-component="LeafletMap,TasksTrigger" data-LeafletMap='{
