--- a/configuration/templates/opportunities/search.hbs
+++ b/configuration/templates/opportunities/search.hbs
@@ -40,7 +40,7 @@
                   Sort by
                 </label>
               </div>
-              <div class="col-3 col-lg-4 col-md-6">
+              <div class="column col-3 col-lg-4 col-md-6">
                 <select class="form-select" id="sort" name="sort" onchange="this.form.submit();">
                   {{#ifAny @root.request.params.query.keywords @root.request.params.query.location @root.request.params.query.activities @root.request.params.query.themes @root.request.params.query.age ~}}
                   <option value="relevance" {{#unless @root.request.params.query.sort}} selected {{/unless}}>Relevance</option>
@@ -91,7 +91,7 @@
       </div>
     {{/if}}
 
-    {{> opportunity_search_result _source distance=sort.[2]}}
+    {{> opportunity_search_result _source distance=fields.distance.[0]}}
 
   {{/each ~}}
 
