Fixed school typeahead issue

--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -63,7 +63,7 @@
       </div>
       <div class="column col-8 col-sm-12">
         <div class="has-icon-right d-inline-block" data-component="Typeahead" data-Typeahead="typeahead-school">
-          <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder="" autocomplete="nope" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="school-lookup" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
+          <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder="" autocomplete="nope" data-lpignore="true" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
           <div class="caption">
             Leave blank if not in education
           </div>
