--- a/configuration/templates/account/auth/user-body-submit.hbs
+++ b/configuration/templates/account/auth/user-body-submit.hbs
@@ -2,11 +2,11 @@
   {{#json}}
     {{#json key='users' type='array'}}
       {{#json}}
-        {{{json key='hours_verify_code' value=(default @root.data.accountInfo.hours_verify_code cvode)}}},
+        {{{json key='hours_verify_code' value=(default @root.data.accountInfo.hours_verify_code code)}}},
         {{{json key='hours_verify_award' value=@root.data.accountInfo.hours_verify_award }}},
 
         {{#if @root.data.codeRequired}}
-          {{{json key='approval_code' value=(stripTags code)}}},
+          {{{json key='approval_code' value=code}}},
           {{{json key='approval_email' value=(stripTags approval_email)}}},
           {{#json key='approval_url' type="text"}}{{@root.context.metaData.url}}/user-approval/?code={{code}}&user_id={{external_id}}{{/json}},
           {{#json key='approval_needed' type="boolean"}}true{{/json}},
@@ -17,7 +17,7 @@
         {{{json key='first_name' value=(stripTags first_name)}}},
         {{{json key='last_name' value=(stripTags last_name)}}},
         {{{json key='postcode' value=(stripTags postcode)}}},
-        {{{json key='external_id' value=(stripTags external_id)}}},
+        {{{json key='external_id' value=@root.data.auth.uid}}},
         {{{json key='date_of_birth' value=(stripTags date_of_birth)}}},
         {{{json key='organisation_name' value=(stripTags organisation_name)}}},
         {{{json key='school_college_name' value=(stripTags school_college_name)}}},
