big changes to location details

--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -28,14 +28,16 @@
         {{{json key='email' value=(stripTags email)}}},
         "email_consent" : {{#compare email_consent '===' 'on'}}true{{else}}false{{/compare}},
         "public_profile" : {{#compare public_profile '===' 'on'}}true{{else}}false{{/compare}},
-        {{{json key='ward_code' value=(stripTags ward_code)}}},
-        {{{json key='district_code' value=(stripTags district_code)}}},
-        {{{json key='nuts_3_code' value=(stripTags nuts_3_code)}}},
-        {{{json key='constituency_code' value=(stripTags constituency_code)}}},
         {{{json key='email_consent' value=@root.data.accountInfo.email_consent}}},
         {{{json key='local_authority' value=(stripTags local_authority)}}},
         {{{json key='tsi_contact_email' value=(stripTags tsi_contact_email)}}},
         {{{json key='tsi_area' value=(stripTags tsi_area)}}},
+        {{{json key='constituency' value=(stripTags constituency)}}},
+        {{{json key='nuts_3' value=(stripTags nuts_3)}}},
+        {{{json key='ward' value=(stripTags ward)}}},
+        {{{json key='simd_datazone' value=(stripTags simd_datazone)}}},
+        {{{json key='simd_rank' value=(stripTags tsi_area)}}},
+
         "summit_certificate_permission" : {{#if @root.data.accountInfo.summit_certificate_permission}}true{{else}}false{{/if}},
         {{{json key='user_type' value=(if admin "Group Admin" else="Volunteer")}}}
       {{/json}},
