trying to fix a bug

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -135,7 +135,7 @@
               {{/each}}
               <div class="dropdown my-account signed-in">
                 <div class="btn-group">
-                  <a href="#" class="btn dropdown-toggle">
+                  <a href="/account" class="btn dropdown-toggle">
                     {{#if @root.data.auth.photoURL ~}}
                       <img src="{{@root.data.auth.photoURL}}" class="avatar avatar-sm" />
                     {{else}}
