--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -135,7 +135,7 @@
               {{/each}}
               <div class="dropdown my-account signed-in">
                 <div class="btn-group">
-                  <a href="/account" class="btn dropdown-toggle">
+                  <a href="#" class="btn dropdown-toggle">
                     {{#if @root.data.auth.photoURL ~}}
                       <img src="{{@root.data.auth.photoURL}}" class="avatar avatar-sm" />
                     {{else}}
@@ -529,19 +529,39 @@
 
   <script type="text/javascript" src="{{~>asset_url url='component-manager.js'~}}"></script>
   <script>
-    var jQuery = $;
-    window.firebaseTaskConfig = {
-      upgradeTokenUrl: '/upgrade-token?token={idToken}',
-      cookieName: 'sa_cookie'
-    };
-    firebase.initializeApp({
-      "apiKey": "AIzaSyBdoW5NoWqvMFMUKufrPVvuaYtNrEIRY6k",
-      "authDomain": "auth.saltireawards.scot",
-      "databaseURL": "https://saltire-awards.firebaseio.com",
-      "projectId": "saltire-awards",
-      "storageBucket": "saltire-awards.appspot.com",
-      "messagingSenderId": "940419868873"
-    });
+  var jQuery = $;
+  window.firebaseTaskConfig = {
+    upgradeTokenUrl: '/upgrade-token?token={idToken}',
+    cookieName: 'sa_cookie'
+  };
+  firebase.initializeApp({
+    "apiKey": "AIzaSyBdoW5NoWqvMFMUKufrPVvuaYtNrEIRY6k",
+    "authDomain": "auth.saltireawards.scot",
+    "databaseURL": "https://saltire-awards.firebaseio.com",
+    "projectId": "saltire-awards",
+    "storageBucket": "saltire-awards.appspot.com",
+    "messagingSenderId": "940419868873"
+  });
+
+  $(document).ready(function() {
+    if (is_touch_device()) {
+      $(".dropdown-toggle").click(function() {
+        $(".dropdown").addClass("active");
+      });
+    }
+  });
+
+  function is_touch_device() {
+    var prefixes = ' -webkit- -moz- -o- -ms- '.split(' ');
+    var mq = function (query) {
+      return window.matchMedia(query).matches;
+    }
+    if (('ontouchstart' in window) || window.DocumentTouch && document instanceof DocumentTouch) {
+      return true;
+    }
+    var query = ['(', prefixes.join('touch-enabled),('), 'heartz', ')'].join('');
+    return mq(query);
+  }
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
