fix for sdg menu on iOS

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -528,7 +528,7 @@
   {{/each ~}}
 
   <script type="text/javascript" src="{{~>asset_url url='component-manager.js'~}}"></script>
-  <script>
+  <script type="text/javascript">
   var jQuery = $;
   window.firebaseTaskConfig = {
     upgradeTokenUrl: '/upgrade-token?token={idToken}',
