--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -245,6 +245,26 @@
                   {{/each ~}}
                 </ul>
               </div>
+              <script type="text/javascript">
+              $(document).ready(function() {
+                if (is_touch_device()) {
+                  $(".dropdown-toggle").click(function() {
+                    $(".dropdown").addClass("active");
+                  });
+                }
+              });
+              function is_touch_device() {
+                var prefixes = ' -webkit- -moz- -o- -ms- '.split(' ');
+                var mq = function (query) {
+                  return window.matchMedia(query).matches;
+                }
+                if (('ontouchstart' in window) || window.DocumentTouch && document instanceof DocumentTouch) {
+                  return true;
+                }
+                var query = ['(', prefixes.join('touch-enabled),('), 'heartz', ')'].join('');
+                return mq(query);
+              }
+              </script>
             </div>
           </div>
         </div>
