--- a/configuration/templates/volunteering/awards.hbs
+++ b/configuration/templates/volunteering/awards.hbs
@@ -129,7 +129,7 @@
             <strong>{{subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))}} {{inflect (subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))) "hour" "hours"}} to go.</strong>
           </div>
           <div class="text-center description">
-            Once you have reached {{hours}} hours, you can request verification by the nominated {{inflect (length @root.data.tasksInfo) "person" "people"}} at the {{inflect (length @root.data.tasksInfo) "place" "places"}} you volunteer.
+            Once you have reached {{hours}} hours, you can request verification from your volunteer {{inflect (length @root.data.tasksInfo) "manager" "managers"}} on this page.
           </div>
         </div>
       </div>
