--- a/configuration/templates/volunteering/claim-hours.hbs
+++ b/configuration/templates/volunteering/claim-hours.hbs
@@ -15,7 +15,7 @@
         <div class="input-group">
           <input id="task-code" name="award_claim_code" class="form-input claim-code input-lg" placeholder="" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_code}}>
           <button id="detail-submit" type="submit" class="submit-button btn btn-primary btn-lg input-group-btn">
-            Claim hours
+            Claim award
           </button>
         </div>
       </div>
