--- a/configuration/templates/opportunities/search.hbs
+++ b/configuration/templates/opportunities/search.hbs
@@ -34,7 +34,7 @@
               <input type="hidden" name="debug_results" value="{{@root.request.params.query.debug_results}}">
             {{/if}}
 
-            <div class="form-group">
+            <div class="form-group" style="margin-bottom:-1px;">
               <div class="column col-ml-auto col-3 col-lg-4 col-md-6">
                 <label class="form-label pull-right r-margin" for="sort">
                   Sort by
