added description to profile

--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -32,7 +32,7 @@
           <div class="card-header">
             <div class="card-title h5">{{truncate organisation_name 45}}</div>
             {{#if task_role ~}}
-            <div class="card-subtitle text-gray">{{truncate task_role 70}}</div>
+            <div class="card-subtitle text-gray">Role: {{truncate task_role 70}}</div>
             {{/if ~}}
           </div>
           <div class="card-body">
