fixed nasty little bug with new admins

--- a/configuration/templates/account/auth/user-body-submit.hbs
+++ b/configuration/templates/account/auth/user-body-submit.hbs
@@ -17,7 +17,7 @@
         {{{json key='last_name' value=(stripTags last_name)}}},
         {{{json key='postcode' value=(stripTags postcode)}}},
         {{{json key='external_id' value=@root.data.auth.uid}}},
-        {{{json key='date_of_birth' value=(stripTags date_of_birth)}}},
+        {{{json key='date_of_birth' value=date_of_birth}}},
         {{{json key='organisation_name' value=(stripTags organisation_name)}}},
         {{{json key='school_college_name' value=(stripTags school_college_name)}}},
         {{{json key='school_college_id' value=(stripTags school_college_id)}}},
