--- a/configuration/templates/errors/404-profile.hbs
+++ b/configuration/templates/errors/404-profile.hbs
@@ -2,7 +2,7 @@
   <div class="empty-icon">
     <span class="fal fa-times-circle fa-3x text-error"></span>
   </div>
-  <p class="empty-title h4">Error 404: The profile you requested could not be shown</p>
+  <p class="empty-title h4">The profile you requested could not be shown</p>
   <p class="empty-subtitle">This is because the volunteer has opted not to publish their profile.</p>
   <div class="empty-action">
     <a href="/" class="btn btn-primary">Home</a>
